Add an H1 with the name of the book

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Odin recipes</title>
 </head>
 <body>
-    
+    <h1>Odin recipes</h1>
+    <a href="./recipes/lomo_saltado.html" alt="A recipe for Lomo Saltado">Lomo Saltado</a>
 </body>
 </html>
