--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Odin recipes</h1>
-    <a href="./recipes/lomo_saltado.html" alt="A recipe for Lomo Saltado">Lomo Saltado</a>
+    <a href="./recipes/lomo_saltado.html" rel="Noopener Noreferrer">Lomo Saltado</a>
 </body>
 </html>
