Add another a tag with another recipe

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Odin recipes</h1>
     <a href="./recipes/lomo_saltado.html" rel="Noopener Noreferrer">Lomo Saltado</a>
+    <a href="./recipes/ceviche.html" rel="Noopener Noreferrer">Ceviche</a>
 </body>
 </html>
