Place all the recipes created in a ul.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Odin recipes</h1>
-    <a href="./recipes/lomo_saltado.html" rel="Noopener Noreferrer">Lomo Saltado</a>
-    <a href="./recipes/ceviche.html" rel="Noopener Noreferrer">Ceviche</a>
+    <ul>
+        <li><a href="./recipes/lomo_saltado.html" rel="Noopener Noreferrer">Lomo Saltado</a></li>
+        <li><a href="./recipes/ceviche.html" rel="Noopener Noreferrer">Ceviche</a></li>
+        <li><a href="./recipes/anticucho.html" rel="Noopener Noreferrer">Anticucho</a></li>
+    </ul>
 </body>
 </html>
