--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="title">
     <h1>Odin recipes</h1>
+    </div>
     <ul>
         <li><a href="./recipes/lomo_saltado.html" rel="Noopener Noreferrer">Lomo Saltado</a></li>
         <li><a href="./recipes/ceviche.html" rel="Noopener Noreferrer">Ceviche</a></li>
