Modify structure of html to add some styles in css

--- a/recipes/lomo_saltado.html
+++ b/recipes/lomo_saltado.html
@@ -4,34 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lomo Saltado</title>
+    <link rel="stylesheet" href="lomo.css">
 </head>
 <body>
     <h1>Lomo Saltado</h1>
-    <img src="./lomo_saltado.jpg" alt="An image of Lomo Saltado" width="310">
-    <h2>Description:</h2>
-    <p>Lomo Saltado is a traditional dish of Peru. It reflects the fusion of creole cuisine with Chinese-Cantonese influence. It's a stir-fried beef(Usually sirloin) cut into strips, cooked over high heat with red onion, tomato, yellow chilli pepper, and in many cases, bell pepper. All of this is sauteed in pan (or wok) with soy sauce, vinegar, garlic, and spices, giving an intense, smoky flavor. What characterizes lomo saltado is the quick stir-fry technique derived from Eastern cuisine, giving it that high-heat flavor that many associate with wok cooking. It's traditionally served with French fries(mixed into the stir-fry on the side) and a portion of white rice, creating a delicious combination that is very representative of Peru's cultural fusion.</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>Rice</li>
-        <li>Onion</li>
-        <li>Sirloin beef</li>
-        <li>Potato</li>
-        <li>Soy sauce</li>
-        <li>Tomato</li>
-        <li>Yellow chilli pepper</li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-        <li><b>Prep your ingredients:</b> Slice the beef, onions, tomatoes, chili peppers, and garlic. Have your soy sauce, vinegar, and seasonings ready.</li>
-        <li><b>Cook the fries:</b> Fry or bake your potatoes until golden and crispy. Set aside. (You can also use store-bought fries if in a hurry.)</li>
-        <li><b>Sear the beef:</b> In a hot wok or large skillet, add a bit of oil and sear the beef over high heat. Don’t overcrowd the pan—work in batches if needed. Cook until browned but still juicy. Remove and set aside.</li>
-        <li><b>Stir-fry</b> the veggies: In the same pan, add a bit more oil. Stir-fry the onions and ají amarillo for about 1-2 minutes, until slightly softened but still crisp.</li>
-        <li><b>Add tomatoes and garlic:</b> Add the tomato wedges and garlic. Stir-fry briefly, just until tomatoes begin to soften.</li>
-        <li><b>Deglaze & season:</b> Return the beef to the pan. Add soy sauce and vinegar. Stir-fry everything together quickly. Season with salt and pepper to taste. Let it cook for another 1-2 minutes so the flavors blend.</li>
-        <li><b>Add fries:</b> Toss in the fries (optional step—some people prefer to serve them on the side).</li>
-        <li><b>Garnish:</b> Sprinkle with chopped cilantro, if desired.</li>
-        <li><b>Serve:</b> Serve hot with a side of white rice. Enjoy!</li>
-    </ol>
-
+    <div class="image-box">
+        <img src="./lomo_saltado.jpg" alt="An image of Lomo Saltado" width="310">
+        <div class="text">
+            <h2 class="description">Description:</h2>
+            <p>Lomo Saltado is a traditional dish of Peru. It reflects the fusion of creole cuisine with Chinese-Cantonese influence. It's a stir-fried beef(Usually sirloin) cut into strips, cooked over high heat with red onion, tomato, yellow chilli pepper, and in many cases, bell pepper. All of this is sauteed in pan (or wok) with soy sauce, vinegar, garlic, and spices, giving an intense, smoky flavor. What characterizes lomo saltado is the quick stir-fry technique derived from Eastern cuisine, giving it that high-heat flavor that many associate with wok cooking. It's traditionally served with French fries(mixed into the stir-fry on the side) and a portion of white rice, creating a delicious combination that is very representative of Peru's cultural fusion.</p>
+        </div>
+    </div>
+    <div class="main">
+        <div class="ingredients-box">
+            <h2 class="ingredients">Ingredients</h2>
+            <ul>
+                <li>Rice</li>
+                <li>Onion</li>
+                <li>Sirloin beef</li>
+                <li>Potato</li>
+                <li>Soy sauce</li>
+                <li>Tomato</li>
+                <li>Yellow chilli pepper</li>
+            </ul>
+        </div>
+        <div class="steps-box">
+            <h2 class="steps">Steps</h2>
+            <ol>
+                <li><b>Prep your ingredients:</b> Slice the beef, onions, tomatoes, chili peppers, and garlic. Have your soy sauce, vinegar, and seasonings ready.</li>
+                <li><b>Cook the fries:</b> Fry or bake your potatoes until golden and crispy. Set aside. (You can also use store-bought fries if in a hurry.)</li>
+                <li><b>Sear the beef:</b> In a hot wok or large skillet, add a bit of oil and sear the beef over high heat. Don’t overcrowd the pan—work in batches if needed. Cook until browned but still juicy. Remove and set aside.</li>
+                <li><b>Stir-fry</b> the veggies: In the same pan, add a bit more oil. Stir-fry the onions and ají amarillo for about 1-2 minutes, until slightly softened but still crisp.</li>
+                <li><b>Add tomatoes and garlic:</b> Add the tomato wedges and garlic. Stir-fry briefly, just until tomatoes begin to soften.</li>
+                <li><b>Deglaze & season:</b> Return the beef to the pan. Add soy sauce and vinegar. Stir-fry everything together quickly. Season with salt and pepper to taste. Let it cook for another 1-2 minutes so the flavors blend.</li>
+                <li><b>Add fries:</b> Toss in the fries (optional step—some people prefer to serve them on the side).</li>
+                <li><b>Garnish:</b> Sprinkle with chopped cilantro, if desired.</li>
+                <li><b>Serve:</b> Serve hot with a side of white rice. Enjoy!</li>
+            </ol>
+        </div>
+    </div>
 </body>
 </html>
