Modify the html structure to add some styles.

--- a/recipes/ceviche.html
+++ b/recipes/ceviche.html
@@ -4,30 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ceviche</title>
+    <link rel="stylesheet" href="ceviche.css">
 </head>
 <body>
     <h1>Ceviche</h1>
-    <img src="./ceviche.jpg" alt="An image of Ceviche" width="310">
-    <h2>Description:</h2>
-    <p>Ceviche is a traditional dish of Peru, made with fresh raw fish marinated in freshly squeezed lime juice, mixed with sliced onions, chilli peppers, and salt. It's often served with sides like sweet potato, corn, or lettuce. Known for its bold, tangy flavors, ceviche is a symbol of Peruvian cuisine and a favorite across Latin America</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>Onions</li>
-        <li>Peruvian corn</li>
-        <li>Chullpi</li>
-        <li>Sweet potato</li>
-        <li>Fresh raw fish</li>
-        <li>lemon</li>
-        <li>chilli peppers</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li><b>Choose fresh fish:</b> Use a firm white fish like sea bass, flounder, or tilapia. Make sure it's as fresh as possible.</li>
-        <li><b>Cut the fish:</b> Dice the fish into small, bite-sized cubes.</li>
-        <li><b>Prepare the marinade ("leche de tigre"):</b> In a bowl, mix freshly squeezed lime juice, salt, sliced red onion, minced garlic, chopped cilantro, and finely chopped fresh chili pepper (like ají limo).</li>
-        <li><b>Marinate the fish:</b> Add the fish to the marinade and mix gently. Let it sit for 10–15 minutes, just enough for the fish to "cook" in the citrus juice.</li>
-        <li><b>Taste and adjust:</b> Taste the marinade and adjust salt or chili to your liking.</li>
-        <li><b>Serve:</b> Serve the ceviche chilled, garnished with extra red onion and chopped cilantro. Traditional sides include boiled sweet potato, corn (like Peruvian choclo), and lettuce.</li>
-    </ol>
+    <div class="image-box">
+        <img src="./ceviche.jpg" alt="An image of Ceviche" width="310">
+        <div class="text">
+            <h2 class="description">Description:</h2>
+            <p>Ceviche is a traditional dish of Peru, made with fresh raw fish marinated in freshly squeezed lime juice, mixed with sliced onions, chilli peppers, and salt. It's often served with sides like sweet potato, corn, or lettuce. Known for its bold, tangy flavors, ceviche is a symbol of Peruvian cuisine and a favorite across Latin America</p>
+        </div>
+    </div>
+    <div class="main">
+        <div class="ingredients-box">
+            <h2 class="ingredients">Ingredients</h2>
+            <ul>
+                <li>Onions</li>
+                <li>Peruvian corn</li>
+                <li>Chullpi</li>
+                <li>Sweet potato</li>
+                <li>Fresh raw fish</li>
+                <li>lemon</li>
+                <li>chilli peppers</li>
+            </ul>
+        </div>
+        <div class="steps-box">
+            <h2 class="steps">Steps</h2>
+            <ol>
+                <li><b>Choose fresh fish:</b> Use a firm white fish like sea bass, flounder, or tilapia. Make sure it's as fresh as possible.</li>
+                <li><b>Cut the fish:</b> Dice the fish into small, bite-sized cubes.</li>
+                <li><b>Prepare the marinade ("leche de tigre"):</b> In a bowl, mix freshly squeezed lime juice, salt, sliced red onion, minced garlic, chopped cilantro, and finely chopped fresh chili pepper (like ají limo).</li>
+                <li><b>Marinate the fish:</b> Add the fish to the marinade and mix gently. Let it sit for 10–15 minutes, just enough for the fish to "cook" in the citrus juice.</li>
+                <li><b>Taste and adjust:</b> Taste the marinade and adjust salt or chili to your liking.</li>
+                <li><b>Serve:</b> Serve the ceviche chilled, garnished with extra red onion and chopped cilantro. Traditional sides include boiled sweet potato, corn (like Peruvian choclo), and lettuce.</li>
+            </ol>
+        </div>
+    </div>
 </body>
 </html>
